--- a/templates/_footer.mustache
+++ b/templates/_footer.mustache
@@ -1,9 +1,13 @@
 			<footer>
-				<p>{{{footer-text}}}</p>
+				<p>{{{copy_rights}}}</p>
 			</footer>
 
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-			{{{first_run}}}
+		    <script>
+                function goto(cl, t) {
+                    $('.pages_wrapper').animate({"left":-($(cl).position().left)}, 400);
+                }
+            </script>
 		</body>
 
 </html>
