--- a/templates/_header.mustache
+++ b/templates/_header.mustache
@@ -7,7 +7,7 @@
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 			<title>{{{site-title}}}</title>
-			<meta name="description" content="">
+			<meta name="description" content="Emil Talev Design - Graphic Design, Branding, Art Direction">
 			<meta name="viewport" content="width=device-width">
 
 			<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -17,12 +17,12 @@
 
     <body>
 			<header>
-				<h1>{{#upcase}}{{site-title}}{{/upcase}}</h1>
-
-				<ul class="navbar">
-				{{#navbar}}
-					<li><a href="{{{href}}}">{{label}}</a>
-				{{/navbar}}
+				<ul class="header">
+					<li><img src="{{logo}}"/></li>
+					<li><img src="{{header_img}}"/></li>
+					<li>WORK</li>
+					<li>ABOUT</li>
+					<li>CONTACT</li>
 				</ul>
 			</header>
 
