--- a/templates/css/site.less
+++ b/templates/css/site.less
@@ -6,26 +6,18 @@ html {
 }
 
 body {
-	width: 60%;
+	width: 970px;
 	margin: 1em auto;
-}
-
-div[role=main] {
-	padding: 1em;
-	background: #FFF;	
-	border: 1px solid #b3b3b3;
- 	border-radius: 4px;
- 	margin: 0 auto;
- 	box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
-	img {
-		position: relative;
-		width: 100%;
-	}
+	font-family:Arial,sans-serif;
 }
 
 footer {
+	border-top-color:#e5e5e5;
+	border-top-style:solid;
+	border-top-width:1px;
 	text-align: center;
 	font-size: 0.75em;
+	color:#e5e5e5;
 }
 
 h1 {
@@ -36,23 +28,103 @@ h1 {
 	color: @title-color;
 }
 
-.navbar {
-	display: block;
-	list-style: none;
-	padding: 0;
-	margin: 0.5em 0 0.67em 0;
-	text-align: center;
+.header {
+	margin:0;
+	padding:20px 0 20px 0;
+	list-style-type:none;
+	border-top-color:#e5e5e5;
+	border-top-style:solid;
+	border-top-width:1px;
+	border-bottom-color:#e5e5e5;
+	border-bottom-style:solid;
+	border-bottom-width:1px;
+
 	li {
-		display: inline-block;
-		margin: 0 0.5em;
-		a {
-			font-size: 1.5em;
-			text-decoration: none;
-			color: #737373;
+		display:inline-block;
+		height:60px;
+		line-height:60px;
+		padding:5px 25px 5px 25px;
+		border-right-style:solid;
+		border-right-color:#e5e5e5;
+		border-right-width:1px;
+	}
+}
+
+.gallery_nav {
+	width:53px;
+	height:10px;
+	padding:20px 0 20px 0;	
+	margin:0 auto 0 auto;
+}
+
+.dark_grey_button {
+	display:block;
+	background-color:#a0a0a0;
+	height:10px;
+	width:20px;
+	float:left;
+	&:hover {
+		cursor:pointer;
+	}
+}
+
+.light_grey_button {
+	display:block;
+	background-color:#d2d2d2;
+	height:10px;
+	width:20px;
+	float:right;
+	&:hover {
+		cursor:pointer;
+	}
+}
+
+.featured {
+	clear:both;
+	margin:0;
+	padding:0;
+	list-style-type:none;
+	li {
+		display:inline-block;
+		padding-left:8px;
+		h5 {
+			font-size:16px;
+			padding:0 0 0 10px;
+			margin:15px 0 0 0;
+			font-weight:normal;
+			border-left-style:solid;
+			border-left-color:#e5e5e5;
+			border-left-width:1px;
+		}
+	}
+	.featured_categories {
+		margin:0 0 15px 0;
+		padding:0 0 0 10px;
+		border-left-style:solid;
+		border-left-color:#e5e5e5;
+		border-left-width:1px;
+		li {
+			padding:0;
+			border:none;
+			font-size:12px;
+			color:#e5e5e5;
 		}
 	}
 }
 
+.content {
+	overflow:hidden;
+}
 
+.pages_wrapper {
+	position:relative;
+	left:0;
+	width:3000px;
+	height:100%;
+}
 
-
+.page_box {
+	width:970px;
+	height:100%;
+	float:left;
+}
