--- a/output/css/site.css
+++ b/output/css/site.css
@@ -2,8 +2,7 @@ html {
   background: #ff11ff 1 F;
 }
 body {
-  width: 970px;
-  margin: 1em auto;
+  width: 100%;
   font-family: Arial, sans-serif;
 }
 a {
@@ -17,7 +16,37 @@ footer {
   border-top-width: 1px;
   text-align: center;
   font-size: 0.75em;
-  color: #e5e5e5;
+  color: #bfbfbf;
+  width: 990px;
+  margin: 0 auto;
+}
+.clear {
+  clear: both;
+}
+.contact {
+  display: none;
+  background-color: #eeeeee;
+  min-height: 40px;
+}
+.contact ul {
+  width: 970px;
+  margin: 0 auto;
+  padding: 0;
+  line-height: 40px;
+}
+.contact ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding-right: 35px;
+  padding-left: 35px;
+}
+.contact ul li a {
+  color: black;
+  line-height: 20px;
+  vertical-align: middle;
+}
+.contact ul li span {
+  vertical-align: middle;
 }
 h1 {
   text-align: center;
@@ -32,9 +61,15 @@ h5 a {
 .current {
   color: #000000;
 }
+header {
+  margin-top: 40px;
+}
 .header {
+  width: 970px;
   margin: 0;
-  padding: 20px 0 20px 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 10px 20px 10px;
   list-style-type: none;
   border-top-color: #e5e5e5;
   border-top-style: solid;
@@ -78,17 +113,42 @@ h5 a {
 .light_grey_button:hover {
   cursor: pointer;
 }
+#first_page,
+#second_page {
+  height: 10px;
+  width: 20px;
+  display: block;
+}
+#first_page {
+  float: left;
+}
+#second_page {
+  float: right;
+}
 .featured {
   clear: both;
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
+.featured .tint {
+  float: left;
+  background-color: #e5e5e5;
+  margin-bottom: 10px;
+}
+.featured img {
+  opacity: .5;
+}
+.featured img:hover {
+  opacity: 1;
+  cursor: pointer;
+}
 .featured li {
   display: inline-block;
   padding-left: 8px;
 }
 .featured li h5 {
+  clear: both;
   font-size: 16px;
   padding: 0 0 0 10px;
   margin: 15px 0 0 0;
@@ -96,23 +156,36 @@ h5 a {
   border-left-style: solid;
   border-left-color: #e5e5e5;
   border-left-width: 1px;
+  line-height: 16px;
 }
 .featured .featured_categories {
-  margin: 0 0 15px 0;
+  margin: 0 0 10px 0;
   padding: 0 0 0 10px;
   border-left-style: solid;
   border-left-color: #e5e5e5;
   border-left-width: 1px;
+  font-size: 16px;
+  line-height: 16px;
 }
 .featured .featured_categories li {
   padding: 0;
   border: none;
   font-size: 12px;
-  color: #e5e5e5;
+  color: #959595;
 }
-.content {
+.content,
+.about_content {
   overflow: hidden;
+  width: 970px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+.about_content {
   padding-top: 30px;
+}
+.about_name {
+  padding-left: 10px;
 }
 .pages_wrapper {
   position: relative;
@@ -136,10 +209,29 @@ h5 a {
   width: 240px;
   float: right;
 }
+.proj_side .nav_list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  line-height: 30px;
+  border-bottom-color: #e5e5e5;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+}
+.proj_side .nav_list li {
+  display: inline;
+  padding-left: 10px;
+  color: #626262;
+  font-size: 9px;
+  font-family: Arial, sans-serif;
+  font-weight: normal;
+}
 .proj_side h3 {
   font-size: 16px;
   font-weight: normal;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
+  padding-left: 10px;
+  margin: 20px 0 20px 0;
 }
 .proj_side .proj_name {
   line-height: 32px;
@@ -155,39 +247,96 @@ h5 a {
   border-bottom-style: solid;
   border-bottom-width: 1px;
 }
+.proj_side .description h4 {
+  margin: 10px 0 10px 0;
+}
 .proj_side .description h4,
 .proj_side .description span {
   font-size: 12px;
   font-weight: normal;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   color: #959595;
+  padding-left: 10px;
+}
+.proj_side .description p {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  color: #959595;
+  padding-left: 10px;
 }
 .proj_side .components {
   border-bottom-color: #e5e5e5;
   border-bottom-style: solid;
   border-bottom-width: 1px;
+  padding-bottom: 30px;
+}
+.proj_side .components h4 {
+  margin: 10px 0 10px 0;
 }
 .proj_side .components h4,
 .proj_side .components li {
   font-size: 12px;
   font-weight: normal;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   color: #959595;
+  padding-left: 10px;
 }
 .proj_side .components ul {
-  padding-left: 16px;
+  padding-left: 30px;
 }
-.proj_side .proj_navigation ul {
+.proj_side .proj_navigation .nav_list {
   list-style: none;
   padding: 0;
+  margin: 0;
+  line-height: 10px;
+  border-bottom-color: #e5e5e5;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  padding: 10px 0 10px 0px;
 }
-.proj_side .proj_navigation ul li {
+.proj_side .proj_navigation h4 {
+  border-bottom-color: #e5e5e5;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  margin: 10px 0 0 0;
+  font-size: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+.proj_side .proj_navigation h4,
+.proj_side .proj_navigation li {
+  font-size: 12px;
+  font-weight: normal;
+  font-family: Arial, sans-serif;
+  color: #959595;
+  padding-left: 10px;
+}
+.proj_side .proj_navigation li {
+  font-size: 10px;
+}
+.proj_side .proj_navigation .nav_list li {
   display: inline;
   padding-left: 10px;
   color: #626262;
-  font-size: 10px;
-  font-family: Arial;
+  font-size: 9px;
+  font-family: Arial, sans-serif;
   font-weight: normal;
+}
+.proj_side .proj_navigation ul.other_projects {
+  margin: 0;
+  padding: 10px 0 10px 10px;
+  border-bottom-color: #e5e5e5;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+}
+.proj_side .proj_navigation ul.other_projects li {
+  display: block;
+  line-height: 18px;
+  margin: 0;
+  padding: 0;
+}
+.proj_side .proj_navigation .current_proj {
+  font-weight: bold;
 }
 .about_image {
   width: 465px;
@@ -196,27 +345,60 @@ h5 a {
 .about_side {
   width: 465px;
   float: right;
+  font-family: Arial, sans-serif;
+  color: #959595;
+  font-weight: normal;
   border-top-style: solid;
   border-top-width: 1px;
   border-top-color: #e5e5e5;
 }
-.about_side h3 {
-  font-weight: normal;
-  color: #959595;
+.about_side h4 {
+  font-weight: lighter;
+  font-size: 18px;
+  margin: 10px 0 10px 0;
 }
 .about_side ul {
   width: 180px;
+  font-size: 12px;
+  font-weight: normal;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.about_side ul li {
+  padding-bottom: 5px;
+}
+.about_side .description {
+  padding-left: 10px;
+}
+.about_side .description p {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  color: #959595;
 }
 .about_side .expertise {
   border-top-style: solid;
   border-top-width: 1px;
   border-top-color: #e5e5e5;
+  margin-bottom: 20px;
+  padding-left: 10px;
+}
+.about_side .expertise h4 {
+  font-size: 18px;
+  font-family: Arial, sans-serif;
+  font-weight: lighter;
 }
 .about_side .clients {
   border-top-style: solid;
   border-top-width: 1px;
   border-top-color: #e5e5e5;
   clear: both;
+  padding-left: 10px;
+}
+.about_side .clients h4 {
+  font-size: 18px;
+  font-family: Arial, sans-serif;
+  font-weight: lighter;
 }
 .about_side .ex_one {
   float: left;
