--- a/templates/projects/_heading.mustache
+++ b/templates/projects/_heading.mustache
@@ -1,9 +1,9 @@
 <header>
     <ul class="header">
-        <li><img src="{{logo}}"/></li>
+        <li><a href="../index.html"><img src="{{logo}}"/></a></li>
         <li><img src="{{header_img}}"/></li>
         <li><a href="../index.html" />WORK</a></li>
         <li><a href="../about.html" />ABOUT</a></li>
-        <li><a href="" />CONTACT</a></li>
+        <li><a href="#" id="contact" />CONTACT</a></li>
     </ul>
 </header>
